<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightYellow"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:fontFamily="@font/raleway"
            android:text="Edit Post"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="517dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.twoshop.components.PrimaryButton
                android:id="@+id/edit_upload_item_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_an_item_label_add_img_btn" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp">

                <ImageView
                    android:id="@+id/edit_post_image"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    app:layout_constraintDimensionRatio="H, 1:1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>


        <EditText
            android:id="@+id/edit_price_of_an_item"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_eur"
            android:fontFamily="@font/raleway"
            android:hint="@string/upload_an_item_label_price"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_about_of_an_item"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_add"
            android:fontFamily="@font/raleway"
            android:hint="@string/upload_an_item_label_about"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_phone_of_an_item"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_phone"
            android:fontFamily="@font/raleway"
            android:hint="@string/upload_an_item_label_phone_to_connect"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/edit_location_of_an_item"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:drawableStart="@drawable/ic_name"
                android:fontFamily="@font/raleway"
                android:hint="Enter Location"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/locationText"
                android:layout_width="246dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/ic_location"
                android:fontFamily="@font/raleway"
                android:hint="Location"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>


        <EditText
            android:id="@+id/edit_owner_of_an_item"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_name"
            android:fontFamily="@font/raleway"
            android:hint="@string/upload_an_item_label_owner_name"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.twoshop.components.PrimaryButton
            android:id="@+id/save_changes_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="save changes" />

    </LinearLayout>

</LinearLayout>